Fix text alignment on wrap

--- a/src/styles/components/_call-to-action.scss
+++ b/src/styles/components/_call-to-action.scss
@@ -18,7 +18,7 @@
   color: $action-primary-dark;
   font-family: $font-family-base-heavy;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.013rem;
   cursor: pointer; // button is default, link is pointer
 
